# Azure_Data_Lake_Security

./: .gitignore  404.html  README.md  create_project.sh  help_command.sh  index.html  pyproject.toml  upload.sh  upload_file_to_dl.py
AZURE_DATA_LAKE_BRIEF_2_04122024/: main.tf  provider.tf  variables.tf
AZURE_DATA_LAKE_BRIEF_2_04122024/modules/data_lake/: main.tf  outputs.tf  variables.tf
AZURE_DATA_LAKE_BRIEF_2_04122024/modules/databricks/: main.tf  outputs.tf  variables.tf
AZURE_DATA_LAKE_BRIEF_2_04122024/modules/key_vault/: main.tf  outputs.tf  variables.tf
AZURE_DATA_LAKE_BRIEF_2_04122024/modules/monitoring/: main.tf  variables.tf
AZURE_DATA_LAKE_BRIEF_2_04122024/modules/resource_group/: main.tf  outputs.tf  variables.tf
Databricks_cluster_analysis/databricks/: main.tf
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/partie1/: introduction.md  structure.md  veille.md
docs/site/: 404.html  index.html  sitemap.xml
partie1/: introduction.html  structure.html  veille.html
partie1/introduction/: index.html
partie1/structure/: index.html
partie1/veille/: index.html
partie2/: deploiement.html  infrastructure.html  ingestion.html  introduction.html  security.html
partie2/deploiement/: index.html
partie2/infrastructure/: index.html
partie2/ingestion/: index.html
partie2/introduction/: index.html
partie2/security/: index.html
partie3/: deploiement.html  introduction.html  securite.html
partie3/deploiement/: index.html
partie3/introduction/: index.html
partie3/securite/: index.html
search/: search_index.json
(+20 files in other folders)
